# ot_ClenshawCurtisExperiment

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.rst  customize.sh
cmake/: ClenshawCurtisExperimentConfig.cmake.in  OTTemplateConfig.cmake.in  UseClenshawCurtisExperiment.cmake  UseOTTemplate.cmake
distro/debian/: changelog  control  copyright  rules
distro/rpm/: clenshawcurtisexperiment.spec  ottemplate.spec
distro/windows/: Makefile  README.txt  installer.nsi
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/clenshawcurtisexperiment/: ClenshawCurtisExperiment.hxx  ClenshawCurtisExperimentprivate.hxx
lib/include/ottemplate/: OTTemplate.hxx
lib/src/: CMakeLists.txt  ClenshawCurtisExperimentClass.cxx  MyClass.cxx  MyClassImplementation.cxx
lib/src/clenshawcurtisexperiment/: ClenshawCurtisExperimentClass.hxx
lib/src/ottemplate/: MyClass.hxx  MyClassImplementation.hxx
lib/test/: CMakeLists.txt  t_ClenshawCurtisExperimentClass_std.cxx  t_ClenshawCurtisExperimentClass_std.expout
python/doc/: conf.py.in  index.rst
python/doc/user_manual/: user_manual.rst
python/src/: CMakeLists.txt  ClenshawCurtisExperimentClass.i  ClenshawCurtisExperimentClassImplementation.i  ClenshawCurtisExperimentClassImplementation_doc.i.in  ClenshawCurtisExperimentClass_doc.i.in  METADATA.in  MyClass.i  MyClassImplementation_doc.i.in  __init__.py  clenshawcurtisexperiment_module.i  ottemplate_module.i
python/test/: CMakeLists.txt  t_ClenshawCurtisExperimentClass_std.expout  t_ClenshawCurtisExperimentClass_std.py  t_docstring.expout  t_docstring.py
(+1 files in other folders)
